Issue #4 Allow a mode for retrieve that provides direct links instead of file copying.
Added a new init-parameter to the PlotSid servlet called retrieve-mode . When set to copy, the database browser will attempt to copy the files to the public-directory. It defaults to "direct" which will append the file path to the "public-directory-visible" path to create a direct link to the file..

--- a/SID/database-browser/web/WEB-INF/web.xml
+++ b/SID/database-browser/web/WEB-INF/web.xml
@@ -60,6 +60,11 @@
       	<param-name>gnuplot-configuration</param-name>
       	<param-value>/web/solar-center/tomcat/database-browser/WEB-INF/resources/plot3.7.2</param-value>
       </init-param>
+
+	  <init-param>
+	  	<param-name>retrieve-mode</param-name>
+		<param-value>copy</param-value>
+	  </init-param>
       
       <init-param>
         <param-name>public-directory</param-name>
